@@ -13,6 +13,7 @@ class V2World {
 		vector<string>	getPotentialTags(); 
 		void				convertCountries(EU3World sourceWorld, countryMapping countryMap, cultureMapping cultureMap, religionMapping religionMap);
 		void				convertProvinces(EU3World sourceWorld, provinceMapping provinceMap, countryMapping countryMap, cultureMapping cultureMap, religionMapping religionMap);
+		void				addUnions(unionMapping unionMap);
 		void				convertCapitals(EU3World sourceWorld, provinceMapping provinceMap);
 		void				setupStates(stateMapping);
 		void				convertTechs(EU3World sourceWorld);
